--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -16,7 +15,9 @@
     "express": "~4.16.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
-    "morgan": "~1.9.1",
-    "nodemon": "^2.0.22"
+    "morgan": "~1.9.1"
+  },
+  "engines": {
+    "node": ">=14 <15"
   }
 }
