--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "ws": "^8.13.0"
   },
   "engines": {
     "node": ">=14 <15"
